@@ -1,3 +1,7 @@
+Sun Jun 13 22:32:09 CEST 2004 Jim Segrave <jes@jes-2.demon.nl>
+
+	* import.c - allow handling uncompleted matches in .mat files
+	
 Sat Jun 12 12:25:54 CEST 2004  Joern Thyssen  <jth@gnubg.org>
 
 	* import.c (ParseSGGOptions): use strcasecmp for deciding which
